fixed alignment

--- a/src/Components/Images/images.css
+++ b/src/Components/Images/images.css
@@ -12,5 +12,4 @@
 .ant-card-body {
   padding: 4px 10px !important;
   display: flex;
-  justify-content: center;
 }
